fix: classify usage timeouts and simplify statistics conditions